--- a/src/main/java/View/Lösungen/LoesungenEinzelaufgaben/LoesungEinzelneEinfachantwortaufgabeView.form
+++ b/src/main/java/View/Lösungen/LoesungenEinzelaufgaben/LoesungEinzelneEinfachantwortaufgabeView.form
@@ -23,7 +23,9 @@
                 <preferred-size width="200" height="350"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <editable value="false"/>
+            </properties>
           </component>
         </children>
       </grid>
@@ -49,7 +51,9 @@
                 <preferred-size width="200" height="350"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <editable value="false"/>
+            </properties>
           </component>
         </children>
       </grid>
