--- a/src/main/java/View/Lösungen/LoesungenTraining/LoesungTrainingProgrammieraufgabeView.form
+++ b/src/main/java/View/Lösungen/LoesungenTraining/LoesungTrainingProgrammieraufgabeView.form
@@ -65,7 +65,9 @@
             <preferred-size width="200" height="350"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <editable value="false"/>
+        </properties>
       </component>
       <component id="561c4" class="javax.swing.JTextField" binding="txtfMusterloesung">
         <constraints>
@@ -74,7 +76,9 @@
             <preferred-size width="200" height="350"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <editable value="false"/>
+        </properties>
       </component>
       <component id="f7f4" class="javax.swing.JButton" binding="btnHinweis">
         <constraints>
