--- a/src/main/java/View/Lösungen/LoesungenTraining/LoesungTrainingDesignaufgabeView.form
+++ b/src/main/java/View/Lösungen/LoesungenTraining/LoesungTrainingDesignaufgabeView.form
@@ -3,9 +3,11 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="15" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="584" height="400"/>
+      <xy x="20" y="20" width="634" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <minimumSize width="634" height="389"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="7abe3" class="javax.swing.JTextField" binding="txtfAufgabentext">
