--- a/src/main/java/View/Lösungen/LoesungenTraining/LoesungTrainingEinfachantwortaufgabeView.form
+++ b/src/main/java/View/Lösungen/LoesungenTraining/LoesungTrainingEinfachantwortaufgabeView.form
@@ -63,12 +63,14 @@
       </component>
       <component id="a7b68" class="javax.swing.JTextField" binding="txtfUserLoesung">
         <constraints>
-          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="9" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="150"/>
             <preferred-size width="200" height="350"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <editable value="false"/>
+        </properties>
       </component>
       <component id="78c62" class="javax.swing.JTextField" binding="txtfMusterloesung">
         <constraints>
@@ -77,7 +79,9 @@
             <preferred-size width="200" height="350"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <editable value="false"/>
+        </properties>
       </component>
       <hspacer id="24405">
         <constraints>
