--- a/src/main/java/View/Lösungen/LoesungenEinzelaufgaben/LoesungEinzelneMultipleChoiceAufgabeView.form
+++ b/src/main/java/View/Lösungen/LoesungenEinzelaufgaben/LoesungEinzelneMultipleChoiceAufgabeView.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="15" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="596" height="568"/>
+      <xy x="20" y="20" width="596" height="569"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -16,17 +16,6 @@
           <text value="Beenden"/>
         </properties>
       </component>
-      <component id="ce973" class="javax.swing.JTextField" binding="txtfAufgabentext">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
-            <minimum-size width="150" height="150"/>
-            <preferred-size width="200" height="250"/>
-          </grid>
-        </constraints>
-        <properties>
-          <editable value="false"/>
-        </properties>
-      </component>
       <vspacer id="922c9">
         <constraints>
           <grid row="3" column="3" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
@@ -37,12 +26,12 @@
       <grid id="59e30" binding="panelUserChoices" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="3" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="61707" class="javax.swing.JRadioButton" binding="btnMoeglichkeit1">
+          <component id="61707" class="javax.swing.JRadioButton" binding="btnUserloesung1">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -52,7 +41,7 @@
               <text value="Userlösung1"/>
             </properties>
           </component>
-          <component id="523f1" class="javax.swing.JRadioButton" binding="btnMoeglichkeit2">
+          <component id="523f1" class="javax.swing.JRadioButton" binding="btnUserloesung2">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -61,7 +50,7 @@
               <text value="Userlösung2"/>
             </properties>
           </component>
-          <component id="7e085" class="javax.swing.JRadioButton" binding="btnMoeglichkeit3">
+          <component id="7e085" class="javax.swing.JRadioButton" binding="btnUserloesung3">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -71,7 +60,7 @@
               <text value="Userlösung3"/>
             </properties>
           </component>
-          <component id="9892b" class="javax.swing.JRadioButton" binding="btnMoeglichkeit4">
+          <component id="9892b" class="javax.swing.JRadioButton" binding="btnUserloesung4">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -97,17 +86,17 @@
       </vspacer>
       <hspacer id="97be6">
         <constraints>
-          <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <hspacer id="a2435">
         <constraints>
-          <grid row="1" column="2" row-span="2" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <hspacer id="e01f3">
         <constraints>
-          <grid row="1" column="6" row-span="2" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="2" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="40" height="-1"/>
           </grid>
         </constraints>
@@ -115,12 +104,12 @@
       <grid id="2f9a4" binding="panelMusterChoices" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="5" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="9fe48" class="javax.swing.JRadioButton" binding="btnLoesung1">
+          <component id="9fe48" class="javax.swing.JRadioButton" binding="btnMusterloesung1">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -129,7 +118,7 @@
               <text value="Musterlösung1"/>
             </properties>
           </component>
-          <component id="e9032" class="javax.swing.JRadioButton" binding="btnLoesung2">
+          <component id="e9032" class="javax.swing.JRadioButton" binding="btnMusterloesung2">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -138,7 +127,7 @@
               <text value="Musterlösung2"/>
             </properties>
           </component>
-          <component id="9d9f4" class="javax.swing.JRadioButton" binding="btnLoesung3">
+          <component id="9d9f4" class="javax.swing.JRadioButton" binding="btnMusterloesung3">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -147,7 +136,7 @@
               <text value="Musterlösung3"/>
             </properties>
           </component>
-          <component id="a4d5e" class="javax.swing.JRadioButton" binding="btnLoesung4">
+          <component id="a4d5e" class="javax.swing.JRadioButton" binding="btnMusterloesung4">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -160,17 +149,30 @@
       </grid>
       <hspacer id="db5a4">
         <constraints>
-          <grid row="1" column="4" row-span="2" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="40" height="-1"/>
           </grid>
         </constraints>
       </hspacer>
-      <component id="21831" class="javax.swing.JLabel" binding="lblAufgabentext">
+      <component id="ce973" class="javax.swing.JTextField" binding="txtfAufgabentext">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="150" height="120"/>
+            <preferred-size width="150" height="120"/>
+          </grid>
         </constraints>
         <properties>
-          <text value="Aufgabentext:"/>
+          <editable value="false"/>
+        </properties>
+      </component>
+      <component id="ed042" class="javax.swing.JLabel" binding="lblAufgabenstellungsbild">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="200"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value=""/>
         </properties>
       </component>
     </children>
