--- a/src/main/java/View/Lösungen/LoesungenTraining/LoesungTrainingMultipleChoiceAufgabeView.form
+++ b/src/main/java/View/Lösungen/LoesungenTraining/LoesungTrainingMultipleChoiceAufgabeView.form
@@ -1,48 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="View.Lösungen.LoesungenTraining.LoesungTrainingMultipleChoiceAufgabeView">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="6" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="15" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="576" height="400"/>
+      <xy x="20" y="20" width="626" height="594"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="50d47" class="javax.swing.JTextField" binding="txtfAufgabentext">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="7" anchor="9" fill="1" indent="0" use-parent-layout="false">
-            <minimum-size width="150" height="150"/>
-            <preferred-size width="200" height="250"/>
-          </grid>
-        </constraints>
-        <properties>
-          <editable value="false"/>
-          <toolTipText value="Aufgabentext:"/>
-        </properties>
-      </component>
       <hspacer id="302ac">
         <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <vspacer id="6d679">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <hspacer id="ce55c">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <hspacer id="2da15">
         <constraints>
-          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <hspacer id="44259">
         <constraints>
-          <grid row="1" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <vspacer id="6f84c">
@@ -52,7 +40,7 @@
       </vspacer>
       <component id="35759" class="javax.swing.JButton" binding="btnBeenden">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="10" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="10" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Beenden"/>
@@ -60,7 +48,7 @@
       </component>
       <component id="20e1" class="javax.swing.JButton" binding="btnHinweis">
         <constraints>
-          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Lösungshinweis anzeigen"/>
@@ -69,12 +57,12 @@
       <grid id="50b9f" binding="panelUserChoices" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="94baa" class="javax.swing.JRadioButton" binding="btnMoeglichkeit1">
+          <component id="94baa" class="javax.swing.JRadioButton" binding="btnUserloesung1">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -83,7 +71,7 @@
               <text value="Userlösung1"/>
             </properties>
           </component>
-          <component id="fd7b2" class="javax.swing.JRadioButton" binding="btnMoeglichkeit2">
+          <component id="fd7b2" class="javax.swing.JRadioButton" binding="btnUserloesung2">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -92,7 +80,7 @@
               <text value="Userlösung2"/>
             </properties>
           </component>
-          <component id="3cfd" class="javax.swing.JRadioButton" binding="btnMoeglichkeit3">
+          <component id="3cfd" class="javax.swing.JRadioButton" binding="btnUserloesung3">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -101,7 +89,7 @@
               <text value="Userlösung3"/>
             </properties>
           </component>
-          <component id="6ca1" class="javax.swing.JRadioButton" binding="btnMoeglichkeit4">
+          <component id="6ca1" class="javax.swing.JRadioButton" binding="btnUserloesung4">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -114,7 +102,7 @@
       </grid>
       <component id="486e9" class="javax.swing.JButton" binding="btnVorherigeAufgabe">
         <constraints>
-          <grid row="3" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="160" height="-1"/>
             <maximum-size width="160" height="-1"/>
           </grid>
@@ -125,7 +113,7 @@
       </component>
       <component id="17177" class="javax.swing.JButton" binding="btnNaechsteAufgabe">
         <constraints>
-          <grid row="4" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="5" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <maximum-size width="160" height="-1"/>
           </grid>
         </constraints>
@@ -136,12 +124,12 @@
       <grid id="ade36" binding="panelMusterChoices" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="1072c" class="javax.swing.JRadioButton" binding="btnLoesung1">
+          <component id="1072c" class="javax.swing.JRadioButton" binding="btnMusterloesung1">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -150,7 +138,7 @@
               <text value="Musterlösung1"/>
             </properties>
           </component>
-          <component id="e38d6" class="javax.swing.JRadioButton" binding="btnLoesung2">
+          <component id="e38d6" class="javax.swing.JRadioButton" binding="btnMusterloesung2">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -159,7 +147,7 @@
               <text value="Musterlösung2"/>
             </properties>
           </component>
-          <component id="19883" class="javax.swing.JRadioButton" binding="btnLoesung3">
+          <component id="19883" class="javax.swing.JRadioButton" binding="btnMusterloesung3">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -168,7 +156,7 @@
               <text value="Musterlösung3"/>
             </properties>
           </component>
-          <component id="839d3" class="javax.swing.JRadioButton" binding="btnLoesung4">
+          <component id="839d3" class="javax.swing.JRadioButton" binding="btnMusterloesung4">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -179,6 +167,28 @@
           </component>
         </children>
       </grid>
+      <component id="50d47" class="javax.swing.JTextField" binding="txtfAufgabentext">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="6" hsize-policy="7" anchor="9" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="150" height="120"/>
+            <preferred-size width="150" height="120"/>
+          </grid>
+        </constraints>
+        <properties>
+          <editable value="false"/>
+          <toolTipText value="Aufgabentext:"/>
+        </properties>
+      </component>
+      <component id="4f62a" class="javax.swing.JLabel" binding="lblAufgabenstellungsbild">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="200"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value=""/>
+        </properties>
+      </component>
     </children>
   </grid>
   <buttonGroups>
